@@ -84,7 +84,7 @@ configuration =
 	#	2800 - all vassals become vassals in EU3 and the liege gets cores
 	#	3900 - all vassals are absorbed in EU3, but cores remain
 	#	4950 - all vassals are absorbed in EU3, and cores are removed
-	vassalScore = "4950"
+	vassalScore = "0"
 
 
 	### EU3 Options ###
